=== seahorse 2.25.1 ===
2008-11-04  Adam Schreiber  <sadam@clemson.edu>

    * configure.in:
	* NEWS:
	* README: Release version 2.25.1

2008-11-03  Adam Schreiber  <sadam@clemson.edu>

    * src/eggtreemultidnd.c:
    * src/eggtreemultidnd.h:
    * libegg/egg-datetime.h:
    * daemon/seahorse-service.h: Clean up GLib and GTK+ includes (GNOME Goal)

2008-10-29  Adam Schreiber  <sadam@clemson.edu>

    * src/seahorse-keyserver-results.c:
    * src/seahorse-keyserver-results.vala:
    * src/seahorse-key-manager.c:
    * src/seahorse-key-manager.vala: Clean up errors in declaration of signal
    handlers.  Fixes bug #558406

=== seahorse 2.24.1 ===

2008-10-19  Stef Walter  <stef@memberwebs.com>

	* configure.in:
	* NEWS:
	* README: Release version 2.24.1

2008-10-18  Stef Walter  <stef@memberwebs.com>

	* pgp/seahorse-pgp-key.c: PGP keys don't always have to come 
	from a PGP source. Should fix bug #553648

2008-10-18  Stef Walter  <stef@memberwebs.com>

	* configure.in: Add gthread to pkg-config requirements.
	Fixes bug 553235. Patch by Jeff Cai.

2008-10-18  Stef Walter  <stef@memberwebs.com>

	* libcryptui/cryptui-key-store.c: cryptui_key_store_set_selected_key 
	used wrong iter. Fixes bug #556187. Patch by Philip Withnall

2008-10-11  Adam Schreiber  <sadam@clemson.edu>

    * * gkr/seahorse-gkr-commands.c:
    * gkr/seahorse-gkr-commands.vala:
    * gkr/vala-build.stamp: Revert 2574
    * po/POTFILES.in: Add src/seahorse-viewer.c.
    * gkr/Makefile.am:
    * gkr/seahorse-gkr-commands.c:
    * gkr/seahorse-gkr-commands.vala:
    * gkr/vala-build.stamp: Use ngettext. Fixes bug #554933
    * po/POTFILES.skip: Remove src/seahorse-viewer.c.  Fixes bug #554937

2008-09-25  Adam Schreiber  <sadam@clemson.edu>

    * src/vala-build.stamp:
    * src/seahorse-keyserver-results.c:
    * src/seahorse-keyserver-results.vala: Fix crasher part of bug #553648

=== seahorse 2.24.0 ===

2008-09-20  Stef Walter  <stef@memberwebs.com>

	* NEWS:
	* configure.in: