@@ -1,3 +1,8 @@
+2008-11-10  Adam Schreiber  <sadam@clemson.edu>
+
+    * libseahorse/seahorse-util.c: Fix markup in dialog.
+    Patch from Jeff Cai.  Fixes bug #558494
+
 === seahorse 2.25.1 ===
 2008-11-04  Adam Schreiber  <sadam@clemson.edu>
 
